--- a/archetype/base-pom/pom.xml
+++ b/archetype/base-pom/pom.xml
@@ -14,30 +14,32 @@
     <description>A parent pom for all the base JARs</description>
 
     <properties>
+        <!--=========================== -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
         <java.version>1.8</java.version>
-
+        <!--=========================== -->
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.2.3</logback.version>
         <junit.version>4.12</junit.version>
         <powermock.version>1.6.2</powermock.version>
         <easymock.version>3.2</easymock.version>
-
+        <!--=========================== -->
         <commons-lang3.version>3.8.1</commons-lang3.version>
         <commons-io.version>2.4</commons-io.version>
         <!-- https://nvd.nist.gov/vuln/detail/CVE-2019-12402 -->
         <commons-compress.version>1.19</commons-compress.version>
-
+        <!--=========================== -->
         <!--https://search.maven.org/search?q=g:org.springframework.boot%20a:spring-boot-dependencies-->
         <spring.version>5.1.5.RELEASE</spring.version>
         <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
-
+        <!--=========================== -->
         <reflections.version>0.9.11</reflections.version>
         <avro.version>1.8.2</avro.version>
         <jackson.version>2.9.8</jackson.version>
         <jackson-binding.version>${jackson.version}</jackson-binding.version>
+        <!--https://github.com/protocolbuffers/protobuf/tree/v3.11.2/java-->
+        <protobuf.version>3.11.0</protobuf.version>
         <!--===========================-->
         <frtu.lib.version>1.0.1-SNAPSHOT</frtu.lib.version>
         <frtu.simple-scan.version>0.2.0</frtu.simple-scan.version>
@@ -100,6 +102,16 @@
                 <groupId>org.apache.avro</groupId>
                 <artifactId>avro</artifactId>
                 <version>${avro.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java</artifactId>
+                <version>${protobuf-java.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java-util</artifactId>
+                <version>${protobuf-java.version}</version>
             </dependency>
             <!--JSON Library-->
             <dependency>
